# convolution_cuda

./: CMakeLists.txt  README.md  conv2d.cu  conv2d_padded.cu  report1-padded.ncu-rep  report1-padded.nsys-rep  report11-padded.ncu-rep  report11-padded.nsys-rep  report13-padded.ncu-rep  report13-padded.nsys-rep  report2-padded.ncu-rep  report2-padded.nsys-rep  report3-padded.ncu-rep  report3-padded.nsys-rep  report4-padded.ncu-rep  report4-padded.nsys-rep  report6-padded.ncu-rep  report6-padded.nsys-rep
docs/: SETUP.md  _config.yml  index.md
docs/assets/: performance.txt  plot_performance.py
docs/implementations/: coalescing.md  naive.md  shared_mem.md  tma.md
docs/js/: performance-chart.js
playbox/: CMakeLists.txt  conv2d_padded.cu  tma_try.cu
src/: kernels.cuh  runner.cu  runner.cuh
src/kernels/: 0_cudnn.cuh  10_kernel_warptiling.cuh  11_kernel_double_buffering.cuh  12_kernel_double_buffering.cuh  1_naive.cuh  2_kernel_global_mem_coalesce.cuh  2_kernel_global_mem_coalesce_padded.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh  6_kernel_vectorize.cuh  7_kernel_resolve_bank_conflicts.cuh  8_kernel_bank_extra_col.cuh  9_kernel_autotuned.cuh
src_padded/: kernels.cuh  kernels_padded.cuh  runner.cu  runner.cuh  runner_padded.cu  runner_padded.cuh
src_padded/kernels/: 1_naive.cuh  8_kernel_bank_extra_col.cuh
src_padded/kernels_padded/: 11_kernel_double_buffering.cuh  1_naive_padded.cuh  3_kernel_shared_mem_blocking.cuh  3_kernel_shared_mem_tma.cuh  4_kernel_1D_blocktiling.cuh  6_kernel_vectorize.cuh
